# color-console-player

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md  color.h  color.hpp  main.cpp  system.hpp
include/: BufferedRandomGenerator.hpp  BufferedVideoCapture.hpp  ConsoleSizeRecorder.hpp  ConsoleWindowSizeService.hpp  FrameRenderer.hpp  FrameWriter.hpp  TextFrame.hpp  TextFrameBuffer.hpp  TextWriter.hpp  ThreadedVideoCapture.hpp  color.hpp
src/: BufferedRandomGenerator.cpp  BufferedVideoCapture.cpp  ConsoleSizeRecorder.cpp  ConsoleWindowSizeService.cpp  FrameRenderer.cpp  FrameWriter.cpp  TextFrame.cpp  TextFrameBuffer.cpp  TextWriter.cpp  ThreadedVideoCapture.cpp  main.cpp
